Project Update, fix Slideshow Quer, fix overflow hidden bei visitenkarte

--- a/css/projectstyle.css
+++ b/css/projectstyle.css
@@ -235,9 +235,7 @@ img {
 /***********Web-Gross************/
 
 @media only screen and (min-width: 600px) {
-    .slideshow-container {
-        height: 750px;
-    }
+
 
     .mySlides {
         height: 100%;
